# sacflow

./: .gitignore  CMakeLists.txt  Makefile  README.md
example/: CMakeLists.txt  Makefile  echo.sh  example.c  sacflow  seaflow
example/steps/: examplesteps.c  examplesteps.h  steps.c  steps.h
example/tests/: echo.c  example.c  permissions.c
src/: CMakeLists.txt  debug.h  sacflow.h  sacsteps.c  sacsteps.h  seaflow.c  seaflow.h  seasteps.c  seasteps.h
src/steps/: compilesteps.c  compilesteps.h  compsteps.c  compsteps.h  runsteps.c  runsteps.h
